--- a/app/javascript/dashboard/i18n/locale/en/auditLogs.json
+++ b/app/javascript/dashboard/i18n/locale/en/auditLogs.json
@@ -2,6 +2,8 @@
   "AUDIT_LOGS": {
     "HEADER": "Audit Logs",
     "HEADER_BTN_TXT": "Add Audit Logs",
+    "DESCRIPTION": "Audit Logs maintain a record of activities in your account, allowing you to track and audit your account, team, or services.",
+    "LEARN_MORE": "Learn more about audit logs",
     "LOADING": "Fetching Audit Logs",
     "SEARCH_404": "There are no items matching this query",
     "SIDEBAR_TXT": "<p><b>Audit Logs</b> </p><p> Audit Logs are trails for events and actions in a Chatwoot System. </p>",
@@ -50,22 +52,22 @@
       "ADD": "%{agentName} created a new team (#%{id})",
       "EDIT": "%{agentName} updated a team (#%{id})",
       "DELETE": "%{agentName} deleted a team (#%{id})"
-  },
-  "MACRO": {
-    "ADD": "%{agentName} created a new macro (#%{id})",
-    "EDIT": "%{agentName} updated a macro (#%{id})",
-    "DELETE": "%{agentName} deleted a macro (#%{id})"
-  },
-  "INBOX_MEMBER": {
-    "ADD": "%{agentName} added %{user} to the inbox(#%{inbox_id})",
-    "REMOVE": "%{agentName} removed %{user} from the inbox(#%{inbox_id})"
-  },
-  "TEAM_MEMBER": {
-    "ADD": "%{agentName} added %{user} to the team(#%{team_id})",
-    "REMOVE": "%{agentName} removed %{user} from the team(#%{team_id})"
-  },
-  "ACCOUNT": {
-    "EDIT": "%{agentName} updated the account configuration (#%{id})"
+    },
+    "MACRO": {
+      "ADD": "%{agentName} created a new macro (#%{id})",
+      "EDIT": "%{agentName} updated a macro (#%{id})",
+      "DELETE": "%{agentName} deleted a macro (#%{id})"
+    },
+    "INBOX_MEMBER": {
+      "ADD": "%{agentName} added %{user} to the inbox(#%{inbox_id})",
+      "REMOVE": "%{agentName} removed %{user} from the inbox(#%{inbox_id})"
+    },
+    "TEAM_MEMBER": {
+      "ADD": "%{agentName} added %{user} to the team(#%{team_id})",
+      "REMOVE": "%{agentName} removed %{user} from the team(#%{team_id})"
+    },
+    "ACCOUNT": {
+      "EDIT": "%{agentName} updated the account configuration (#%{id})"
+    }
   }
-}
 }
